	 (compiles, but untested).
20040702 machines/tc2048.c,memory.c,scld.c,slt.c,zxatasp.c,zxcf.c:
         #include <string.h> for memcpy and memset prototypes.
20040702 configure.in,ui/Makefile.am: disable the broken and unmaintained
	 GGI user interface.
20040703 settings.dat,man/fuse.1,ui/options.dat,widget/menu.c: allow
	 selection between .szx and .z80 for snaps saved by the widget
	 UIs.
20040703 rzx.c: use libspectrum's new ability to select the embedded snap
	 format.
20040704 ui/uijoystick.h: remove unused kempston_bits and kempston_type
	 types.
20040704 configure.in: --without-gtk disables GTK+ 2.0 user interface
	 (Darren).
20040704 screenshot.c,sound.c,ui/ggi/ggidisplay.c,ui/gtk/gtkdisplay.c,
	 ui/scaler/scaler.c,ui/sdl/sdldisplay.c,ui/xlib/xdisplay.c,
	 z80/z80.[ch]: make some variables static and/or const where
	 appropriate (Darren).
20040704 timer.c: add calibration for the setitimer() routines (Darren).
20040705 configure.in: add missing comma.
20040706 menu.h: get initial comment filename right (thanks, Marek).
20040706 acinclude.m4: distribute the Glib 1.2, Glib 2.x, GTK+ 1.2, GTK+
	 2.x and libxml2 autoconf macros.
20040707 z80/z80.pl,z80/tests/edb[3b].out: make INI, OUTI, INIR, OTIR and
	 the D variants timings consistent with the FAQ.
20040707 acinclude.m4: update SDL macros to latest upstream.
20040708 timer.c: modify timer calibration slightly (Darren).
20040708 ui/fb/fbkeyboard.c: update for new input layer (Darren).
20040708 ui/fb/fbui.c: add SIGTERM and SIGHUP handlers (Darren).
20040708 input.h,keyboard.c,keysyms.dat: map Tab to Extended Mode (Darren).
20040709 ui/gtk/debugger.c: shorten 'Writable?' and 'Contended?' headings.
20040709 configure.in: bump version number to 0.7.0pre1.
20040709 TAG: Release-0_7_0pre1
20040710 ui/fb/fbui.c: #include <errno.h> and <string.h>
20040715 ui/svga/svgajoystick.c: fix up for new input layer (Darren).
20040715 ChangeLog,README,man/fuse.1: more 0.7.0 doc updates.