@@ -29,5 +29,5 @@ set -e
 
 aclocal
 autoheader
-automake --add-missing
+automake --add-missing --copy
 autoconf
